# tripfinger-ios

./: .gitignore  Podfile  README.md  common.pri
3party/protobuf/: .gitignore
AdventureSpotter/: AppDelegate.swift  Info.plist  ViewController.swift
AdventureSpotter.xcodeproj/: project.pbxproj
AdventureSpotter.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
AdventureSpotter/Base.lproj/: LaunchScreen.xib
AdventureSpotterTests/: AdventureSpotterTests.swift  Info.plist
AndroidComponent2/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
AndroidComponent2/app/assets/: countries_obsolete.txt  cuisine-strings  resources-6plus_legacy  resources-ldpi_clear  resources-ldpi_dark
AndroidComponent2/app/src/androidTest/java/com/tripfinger/androidcomponent2/: ExampleInstrumentedTest.java
AndroidComponent2/app/src/main/: AndroidManifest.xml
AndroidComponent2/app/src/main/cpp/: MapFragment.cpp  native-lib.cpp
AndroidComponent2/app/src/main/cpp/core/: jni_helper.cpp  jni_helper.hpp  logging.cpp  logging.hpp
AndroidComponent2/app/src/main/cpp/maps/: Framework.cpp  UserMarkHelper.hpp
AndroidComponent2/app/src/main/cpp/opengl/: android_gl_utils.cpp  android_gl_utils.hpp  androidoglcontext.cpp  androidoglcontextfactory.cpp  androidoglcontextfactory.hpp
AndroidComponent2/app/src/main/cpp/platform/: Language.cpp  PThreadImpl.cpp  Platform.cpp
AndroidComponent2/app/src/main/java/com/tripfinger/androidcomponent2/: Framework.java  MainActivity.java  MapFragment.java  MwmApplication.java
AndroidComponent2/app/src/main/java/com/tripfinger/androidcomponent2/base/: BaseActivity.java  BaseActivityDelegate.java  BaseMwmFragment.java  BaseMwmFragmentActivity.java
AndroidComponent2/app/src/main/java/com/tripfinger/androidcomponent2/data/: Bookmark.java  BookmarkCategory.java  BookmarkManager.java  DistanceAndAzimut.java  Icon.java  MapObject.java  Metadata.java  ParcelablePointD.java  Track.java
AndroidComponent2/app/src/main/java/com/tripfinger/androidcomponent2/util/: ConnectionState.java  UiUtils.java
AndroidComponent2/app/src/main/java/com/tripfinger/androidcomponent2/util/log/: MemLogging.java
AndroidComponent2/app/src/main/res/layout/: activity_main.xml
AndroidComponent2/app/src/main/res/values/: dimens.xml  strings.xml
AndroidComponent2/app/src/test/java/com/tripfinger/androidcomponent2/: ExampleUnitTest.java
SKMaps.bundle/: BundleInfo.plist
SKMaps.bundle/AdvisorConfigs/: POI_config.csv
SKMaps.framework/: Info.plist
SKMaps.framework/Headers/: SKAdvisorSettings.h  SKAdvisorTTSSettings.h  SKAnimationSettings.h  SKAnnotation.h  SKAnnotationView.h  SKBoundingBox.h  SKCalloutView.h  SKCalloutViewDelegate.h  SKCameraSettings.h  SKCircle.h  SKCoordinate.h  SKCrossingDescriptor.h  SKCurrentPositionAnimationSettings.h  SKDefinitions.h  SKDetectedPOI.h  SKGPSFileElement.h  SKGPSFilesService.h  SKMapCustomPOI.h  SKMapInternationalizationSettings.h  SKMapPOI.h  SKMapPackage.h  SKMapPackageDownloadInfo.h  SKMapScaleView.h  SKMapSettings.h  SKMapVersioningDelegate.h  SKMapView+GPSFiles.h  SKMapView+HeatMaps.h  SKMapView+Overlays.h  SKMapView+RealReach.h  SKMapView+Style.h  SKMapView.h  SKMapViewDelegate.h  SKMapViewStyle.h  SKMaps.h  SKMapsInitSettings.h  SKMapsService.h  SKMapsVersioningManager.h  SKMultiStepSearchSettings.h  SKNavigationDelegate.h  SKNavigationSettings.h  (+36 more)
SKMaps.framework/Modules/: module.modulemap
SKMaps.framework/_CodeSignature/: CodeResources
Tripfinger/: .eslintrc.json  AnnotationCalloutView.swift  AnnotationService.swift  AppDelegate.swift  Attraction.swift  AttractionCardView.swift  AttractionSwipe.swift  AttractionsController.swift  BridgingHeader.h  CategoryCell.swift  CategoryCell.xib  ChooseAttractionView.swift  ContentService.swift  DataManager.swift  DatabaseService.swift  DetailController.swift  DownloadController.swift  DownloadService.swift  ErrorHandler.swift  FilterBox.swift  FilterBox.xib  FilterController.swift  GuideController.swift  GuideItem.swift  GuideItemCell.swift  GuideItemCell.xib  GuideItemController.swift  GuideItemImage.swift  GuideListing.swift  GuideLocation.swift  GuideText.swift  ImageLabelView.swift  Info.plist  JsonParserService.swift  LicenseController.swift  ListController.swift  Listing.swift  ListingCell.swift  ListingCell.xib  ListingsController.swift  (+48 more)
Tripfinger.xcodeproj/: project.pbxproj
Tripfinger/Base.lproj/: LaunchScreen.xib  Main.storyboard
Tripfinger/Data/: Data.json  brussels.xml
Tripfinger/__mocks__/: react-native-filesystem.js  realm.js
Tripfinger/android/: settings.gradle
Tripfinger/components/: DownloadPopup.js  GuideItemCell.js  ImageAnimation.js  ListCellSeparator.js  MWMMapView.js  (+6 more)
TripfingerTests/: ContentServiceTest.swift  DatabaseServiceTest.swift  DownloadServiceTest.swift  JsonParserServiceTest.swift  NetworkUtilTest.swift  OfflineSearchTest.swift  OnlineSearchTest.swift  SearchServiceTest.swift  SkobblerSearchTest.swift  SyncManagerTest.swift  TripfingerTests.swift  brunei-download.json  thailand.json
TripfingerUITests/: DownloadCountryTest.swift  GuideViewOnlineTest.swift  ListViewOnlineTest.swift  OfflineWithDataTest.swift  OfflineWithoutDataTest.swift  SearchOnlineTest.swift  SwipeViewOnlineTest.swift  TestUtils.swift  TripfingerUITests.swift
android/: build.gradle  gradle.properties
base/: base.cpp
data/: copyright.html  faq.html
drape_frontend/: apply_feature_functors.cpp  apply_feature_functors.hpp  map_data_provider.cpp  map_data_provider.hpp  read_manager.cpp  rule_drawer.cpp  rule_drawer.hpp  tile_info.cpp
indexer/: feature.cpp  feature.hpp  feature_cache.cpp  feature_cache.hpp  feature_decl.hpp  feature_meta.hpp  index.hpp  indexer.pro
map/: bookmark.cpp  bookmark.hpp  bookmark_manager.cpp  bookmark_manager.hpp  framework.cpp  framework.hpp  place_page_info.hpp  tf_bookmark.cpp  tf_bookmark.hpp  user_mark_container.cpp
platform/: preferred_languages.cpp  servers_list.cpp  servers_list.hpp
search/: params.hpp  result.cpp  result.hpp  search_engine.cpp  search_query.cpp  search_query.hpp  search_query_factory.hpp
storage/: storage.cpp
(+569 files in other folders)
